--- a/src/app/swiss/containers/players-page.component.html
+++ b/src/app/swiss/containers/players-page.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-sm-6">
-    <mm-swiss-player-form
+    <mm-player-form
       [hasBegunTournament]="hasBegunTournament$ | async"
       [isTournamentOver]="isTournamentOver$ | async"
       [selectedPlayer]="selectedPlayer"
       (addPlayer)="addPlayer($event)"
       (playerFormReset)="clearSelectedPlayer()"
-      (updatePlayerName)="updatePlayerName($event)"></mm-swiss-player-form>
+      (updatePlayerName)="updatePlayerName($event)"></mm-player-form>
     <mm-swiss-players-start
       [canBeginTournament]="canBeginTournament$ | async"
       [hasBegunTournament]="hasBegunTournament$ | async"
@@ -15,11 +15,11 @@
   </div>
 
   <div class="col-sm-6">
-    <mm-swiss-player-list
+    <mm-player-list
       [hasBegunTournament]="hasBegunTournament$ | async"
       [players]="players$ | async"
       [selectedPlayer]="selectedPlayer"
       (playerDeleted)="onPlayerDeleted($event)"
-      (playerSelected)="selectPlayer($event)"></mm-swiss-player-list>
+      (playerSelected)="selectPlayer($event)"></mm-player-list>
   </div>
 </div>
