--- a/src/app/swiss/containers/players-page.component.html
+++ b/src/app/swiss/containers/players-page.component.html
@@ -7,11 +7,11 @@
       (addPlayer)="addPlayer($event)"
       (playerFormReset)="clearSelectedPlayer()"
       (updatePlayerName)="updatePlayerName($event)"></mm-player-form>
-    <mm-swiss-players-start
+    <mm-start-form
       [canBeginTournament]="canBeginTournament$ | async"
       [hasBegunTournament]="hasBegunTournament$ | async"
       [recommendedNumberOfRounds]="recommendedNumberOfRounds$ | async"
-      (startTournament)="onStartTournament($event)"></mm-swiss-players-start>
+      (startTournament)="onStartTournament($event)"></mm-start-form>
   </div>
 
   <div class="col-sm-6">
