#68: Fixing issue with selecting players. - Start ID at 1 not 0.

--- a/src/app/swiss/components/player-list.component.html
+++ b/src/app/swiss/components/player-list.component.html
@@ -2,8 +2,8 @@
   <a *ngFor="let player of players"
       class="list-group-item"
       [ngClass]="{'active': selectedPlayer === player, 'list-group-item-warning': player.dropped}"
-      (click)="selectPlayer(player)">
+      (click)="select.emit(player)">
     {{player.name}}<small><em>{{player.dropped ? ' (dropped)' : ''}}</em></small>
-    <button class="close" *ngIf="!hasBegunTournament" (click)="deletePlayer(player, $event)">&times;</button>
+    <button class="close" *ngIf="!hasBegunTournament" (click)="delete.emit(player)">&times;</button>
   </a>
 </div>
