--- a/src/app/swiss/containers/players-page.component.html
+++ b/src/app/swiss/containers/players-page.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-2">
       <mm-swiss-menu
-        [hasTournamentStarted]="hasTournamentStarted$ | async"
+        [hasTournamentStarted]="hasBegunTournament$ | async"
         [numberOfActivePlayers]="numberOfActivePlayers$ | async"></mm-swiss-menu>
     </div>
 
