--- a/src/app/swiss/components/player-form.component.html
+++ b/src/app/swiss/components/player-form.component.html
@@ -9,7 +9,7 @@
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-8">
         <button type="submit" class="btn btn-default" [disabled]="!swissPlayerForm.valid">{{addMode ? 'Add' : 'Save'}} Player</button>
-        <button type="reset" class="btn btn-default" (click)="reset()" [disabled]="!swissPlayerForm.valid">Cancel</button>
+        <button type="reset" class="btn btn-default" (click)="reset.emit()" [disabled]="!swissPlayerForm.valid">Cancel</button>
         <button type="button"
           class="btn"
           [ngClass]="{'btn-default': !isPlayerDroppable, 'btn-warning': isPlayerDroppable}"
