--- a/src/app/swiss/components/swiss-menu.component.html
+++ b/src/app/swiss/components/swiss-menu.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-stacked">
-  <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-    <a routerLink="/swiss">Players <span class="badge" *ngIf="numberOfActivePlayers > 0">{{numberOfActivePlayers}}</span></a>
+  <li role="presentation" routerLinkActive="active">
+    <a routerLink="/swiss/players">Players <span class="badge" *ngIf="numberOfActivePlayers > 0">{{numberOfActivePlayers}}</span></a>
   </li>
   <li role="presentation" routerLinkActive="active" *ngIf="hasTournamentStarted">
     <a routerLink="/swiss/event">Event Info</a>
