#68: Fixing bad event name in players page component.

--- a/src/app/swiss/containers/players-page.component.html
+++ b/src/app/swiss/containers/players-page.component.html
@@ -5,7 +5,7 @@
       [isTournamentOver]="isTournamentOver$ | async"
       [selectedPlayer]="selectedPlayer"
       (addPlayer)="addPlayer($event)"
-      (playerFormReset)="clearSelectedPlayer()"
+      (reset)="clearSelectedPlayer()"
       (updatePlayerName)="updatePlayerName($event)"></mm-player-form>
     <mm-start-form
       [canBeginTournament]="canBeginTournament$ | async"
