--- a/src/app/swiss/components/player-list.component.html
+++ b/src/app/swiss/components/player-list.component.html
@@ -4,6 +4,6 @@
       [ngClass]="{'active': selectedPlayer === player, 'list-group-item-warning': player.dropped}"
       (click)="select.emit(player)">
     {{player.name}}<small><em>{{player.dropped ? ' (dropped)' : ''}}</em></small>
-    <button class="close" *ngIf="!hasBegunTournament" (click)="delete.emit(player)">&times;</button>
+    <button class="close" *ngIf="!hasTournamentStarted" (click)="delete.emit(player)">&times;</button>
   </a>
 </div>
