#68: Getting player dropping working again. - Replacing the updatePlayerName stuff with a more generic updatePlayer.

--- a/src/app/swiss/components/player-form.component.html
+++ b/src/app/swiss/components/player-form.component.html
@@ -15,7 +15,7 @@
           [ngClass]="{'btn-default': !isPlayerDroppable, 'btn-warning': isPlayerDroppable}"
           *ngIf="hasTournamentStarted && !isTournamentOver"
           [disabled]="!selectedPlayer || !selectedPlayer.id"
-          (click)="toggleSelectedPlayerDropped()">{{isPlayerDroppable ? 'Drop' : 'Undrop'}}</button>
+          (click)="togglePlayerDropped.emit(selectedPlayer)">{{isPlayerDroppable ? 'Drop' : 'Undrop'}}</button>
       </div>
     </div>
   </div>
