--- a/src/app/swiss/containers/players-page.component.html
+++ b/src/app/swiss/containers/players-page.component.html
@@ -5,7 +5,7 @@
       [isTournamentOver]="isTournamentOver$ | async"
       [selectedPlayer]="selectedPlayer"
       (addPlayer)="addPlayer($event)"
-      (dropPlayer)="dropPlayer($event)"
+      (togglePlayerDropped)="togglePlayerDropped($event)"
       (reset)="clearSelectedPlayer()"
       (updatePlayerName)="updatePlayerName($event)"></mm-player-form>
     <mm-start-form
