--- a/src/app/swiss/containers/event-info.component.html
+++ b/src/app/swiss/containers/event-info.component.html
@@ -1,19 +1,9 @@
 <div class="row">
   <div class="col-sm-6 col-md-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Rounds</h3>
-      </div>
-
-      <div class="panel-body">
-        <ul class="list-unstyled">
-          <li>Number of rounds: {{numberOfRounds}}</li>
-          <li>Current round: {{currentRound}}</li>
-          <li>Completed round: {{completedRound}}</li>
-          <li>Ongoing matches: {{ongoingMatches}}</li>
-        </ul>
-      </div>
-    </div>
+    <mm-round-info
+      [currentRound]="currentRound$ | async"
+      [numberOfRounds]="numberOfRounds$ | async"
+    ></mm-round-info>
   </div>
 
   <div class="col-sm-6 col-md-3">
