--- a/src/app/swiss/containers/event-info.component.html
+++ b/src/app/swiss/containers/event-info.component.html
@@ -7,19 +7,11 @@
   </div>
 
   <div class="col-sm-6 col-md-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Players</h3>
-      </div>
-
-      <div class="panel-body">
-        <ul class="list-unstyled">
-          <li>Total players: {{totalPlayers}}</li>
-          <li>Active players: {{activePlayers}}</li>
-          <li>Dropped players: {{droppedPlayers}}</li>
-        </ul>
-      </div>
-    </div>
+    <mm-players-info
+      [activePlayers]="activePlayers$ | async"
+      [droppedPlayers]="droppedPlayers$ | async"
+      [totalPlayers]="totalPlayers$ | async"
+    ></mm-players-info>
   </div>
 </div>
 <div class="row">
