--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -1,17 +1,6 @@
-<form class="form-horizontal" [formGroup]="pairingsForm">
-  <div class="form-group">
-    <label for="selected-round" class="control-label col-sm-2">Round</label>
-    <div class="col-sm-2">
-      <select id="selected-round" class="form-control" formControlName="currentRound">
-        <option *ngFor="let round of rounds" [value]="round">{{round}}</option>
-      </select>
-    </div>
-    <div class="col-sm-2">
-      <button class="btn btn-default" *ngIf="!(selectedRoundHasPairings$ | async)" (click)="generatePairings()">Generate Pairings</button>
-      <button class="btn btn-default" *ngIf="canStartNextRound$ | async" (click)="createNextRound()">Create Next Round</button>
-    </div>
-  </div>
-</form>
+<mm-pairings-menu
+  [rounds]="rounds$ | async"
+  (createPairings)="createPairings($event)"></mm-pairings-menu>
 <mm-pairings-list
   [pairings]="pairings$ | async"
   (lastResultSubmitted)="onLastResultSubmitted()"
