--- a/src/app/swiss/components/pairings-menu.component.html
+++ b/src/app/swiss/components/pairings-menu.component.html
@@ -2,12 +2,12 @@
   <div class="form-group">
     <label for="selected-round" class="control-label col-sm-2">Round</label>
     <div class="col-sm-2">
-      <select id="selected-round" class="form-control" [formControl]="currentRound">
+      <select id="selected-round" class="form-control" [formControl]="selectedRoundControl">
         <option *ngFor="let round of rounds" [value]="round">{{round}}</option>
       </select>
     </div>
     <div class="col-sm-2">
-      <button class="btn btn-default" *ngIf="!(selectedRoundHasPairings$ | async)" (click)="createPairings.emit(currentRound.value)">Create Pairings</button>
+      <button class="btn btn-default" *ngIf="!(selectedRoundHasPairings$ | async)" (click)="createPairings.emit(selectedRoundControl.value)">Create Pairings</button>
       <button class="btn btn-default" *ngIf="canStartNextRound$ | async" (click)="createNextRound()">Create Next Round</button>
     </div>
   </div>
