--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -1,4 +1,5 @@
 <mm-pairings-menu
+  [numberOfRounds]="numberOfRounds$ | async"
   [rounds]="rounds$ | async"
   [selectedRound]="selectedRound$ | async"
   (createPairings)="createPairings($event)"
