--- a/src/app/swiss/components/round-info.component.html
+++ b/src/app/swiss/components/round-info.component.html
@@ -6,8 +6,8 @@
   <div class="panel-body">
     <ul class="list-unstyled">
       <li>Number of rounds: {{numberOfRounds}}</li>
-      <li>Current round: {{currentRound}}</li>
-      <li>Completed round: {{completedRound}}</li>
+      <li>Current round: {{currentRoundId}}</li>
+      <li>Completed round: {{completedRoundId || 'None'}}</li>
       <li>Ongoing matches: {{ongoingMatches}}</li>
     </ul>
   </div>
