--- a/src/app/swiss/containers/event-info.component.html
+++ b/src/app/swiss/containers/event-info.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-sm-6 col-md-3">
     <mm-round-info
-      [currentRound]="currentRound$ | async"
+      [completedRoundId]="completedRoundId$ | async"
+      [currentRoundId]="currentRoundId$ | async"
       [numberOfRounds]="numberOfRounds$ | async"
     ></mm-round-info>
   </div>
