--- a/src/app/swiss/components/pairings-menu.component.html
+++ b/src/app/swiss/components/pairings-menu.component.html
@@ -3,7 +3,7 @@
     <label for="selected-round" class="control-label col-sm-2">Round</label>
     <div class="col-sm-2">
       <select id="selected-round" class="form-control" [formControl]="selectedRoundControl">
-        <option *ngFor="let round of rounds" [value]="round">{{round}}</option>
+        <option *ngFor="let round of roundIds" [value]="round">{{round}}</option>
       </select>
     </div>
     <div class="col-sm-2">
