--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -1,11 +1,13 @@
 <mm-pairings-menu
   [numberOfRounds]="numberOfRounds$ | async"
   [roundIds]="roundIds$ | async"
-  [selectedRoundId]="selectedRound$ | async"
+  [selectedRoundId]="selectedRoundId$ | async"
   (createPairings)="createPairings($event)"
   (roundChanged)="roundChanged($event)"></mm-pairings-menu>
 <mm-pairings-list
   [pairings]="pairings$ | async"
+  [pairingsExist]="pairingsExist$ | async"
+  [playerEntities]="playerEntities$ | async"
   (lastResultSubmitted)="onLastResultSubmitted()"
   (matchResultsCleared)="onMatchResultsCleared($event)"
   (playerDroppedChanged)="onPlayerDroppedChanged($event)"
