#68: Fixing the hiding of the create pairings button.

--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -1,5 +1,6 @@
 <mm-pairings-menu
   [numberOfRounds]="numberOfRounds$ | async"
+  [pairingsExist]="pairingsExist$ | async"
   [roundIds]="roundIds$ | async"
   [selectedRoundId]="selectedRoundId$ | async"
   (createPairings)="createPairings($event)"
