--- a/src/app/swiss/components/pairings-menu.component.html
+++ b/src/app/swiss/components/pairings-menu.component.html
@@ -7,7 +7,7 @@
       </select>
     </div>
     <div class="col-sm-2">
-      <button class="btn btn-default" *ngIf="!(selectedRoundHasPairings$ | async)" (click)="createPairingsClicked()">Create Pairings</button>
+      <button class="btn btn-default" *ngIf="!pairingsExist" (click)="createPairingsClicked()">Create Pairings</button>
       <button class="btn btn-default" *ngIf="canStartNextRound$ | async" (click)="createNextRound()">Create Next Round</button>
     </div>
   </div>
