#68: Implementing the Redo Matches button.

--- a/src/app/swiss/components/pairings-list.component.html
+++ b/src/app/swiss/components/pairings-list.component.html
@@ -29,8 +29,8 @@
 
           <button type="button"
               class="btn btn-default pull-right redo-matches"
-              [disabled]="selectedRoundHasSubmittedPairings"
-              (click)="redoMatches()">
+              [disabled]="hasSubmittedPairings"
+              (click)="this.redoMatches.emit(selectedRoundId)">
             Redo Matches
           </button>
         </div>
