#68: Creating selector for selectedRoundComplete. - Bunch of cleanup of unsused functions and imports.

--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -11,6 +11,7 @@
   [hasSubmittedPairings]="hasSubmittedPairings$ | async"
   [pairingsExist]="pairingsExist$ | async"
   [playerEntities]="playerEntities$ | async"
+  [selectedRoundComplete]="selectedRoundComplete$ | async"
   [selectedRoundId]="selectedRoundId$ | async"
   (filterTextChanged)="updateFilterText($event)"
   (redoMatches)="redoMatches($event)"
