#68: Adding ongoing matches total to the event info page. - Cleanup old code in the RoundsReducer.

--- a/src/app/swiss/containers/event-info.component.html
+++ b/src/app/swiss/containers/event-info.component.html
@@ -4,6 +4,7 @@
       [completedRoundId]="completedRoundId$ | async"
       [currentRoundId]="currentRoundId$ | async"
       [numberOfRounds]="numberOfRounds$ | async"
+      [ongoingMatchesTotal]="ongoingMatchesTotal$ | async"
     ></mm-round-info>
   </div>
 
