--- a/src/app/swiss/components/match-results.component.html
+++ b/src/app/swiss/components/match-results.component.html
@@ -66,7 +66,7 @@
       <div class="col-xs-4">
         <button type="submit"
             class="btn btn-default pull-right"
-            [disabled]="!resultValid || selectedRoundComplete">
+            [disabled]="matchResultsForm.errors?.matchResultInvalid || selectedRoundComplete">
           Submit
         </button>
       </div>
