--- a/src/app/swiss/components/match-results.component.html
+++ b/src/app/swiss/components/match-results.component.html
@@ -73,7 +73,7 @@
       <div class="col-xs-4">
         <button type="button"
             class="btn btn-default"
-            (click)="clearMatchResult.emit(selectedPairing)"
+            (click)="clearMatchResult.emit(selectedPairing.id)"
             [disabled]="selectedRoundComplete">
           Clear Result
         </button>
