--- a/src/app/swiss/components/pairings-list.component.html
+++ b/src/app/swiss/components/pairings-list.component.html
@@ -49,7 +49,7 @@
       <tbody>
         <tr *ngFor="let pairing of filteredPairings"
             [ngClass]="{'active': selectedPairingId === pairing.table}"
-            (click)="selectPairing.emit(pairing.table)">
+            (click)="selectPairing.emit(pairing.id)">
           <td>{{pairing.table}}</td>
           <td>{{playerEntities[pairing.player1Id].name}}</td>
           <td>{{resultDisplayString(pairing)}}</td>
