#68: Fixing issues with bad actions for deleting pairings.

--- a/src/app/swiss/components/pairings-list.component.html
+++ b/src/app/swiss/components/pairings-list.component.html
@@ -47,7 +47,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let pairing of filteredPairings"
+        <tr *ngFor="let pairing of pairings"
             [ngClass]="{'active': selectedPairingId === pairing.table}"
             (click)="selectPairing.emit(pairing.id)">
           <td>{{pairing.table}}</td>
