--- a/src/app/swiss/components/pairings-list.component.html
+++ b/src/app/swiss/components/pairings-list.component.html
@@ -1,41 +1,8 @@
 <div class="row" *ngIf="pairingsExist">
   <div class="col-xs-12">
-    <form class="form-horizontal" [formGroup]="pairingsListForm">
-      <div class="form-group">
-        <div class="col-xs-3">
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" formControlName="showOutstandingOnly"> Show Outstanding Only
-            </label>
-          </div>
-        </div>
-
-        <label for="search-text" class="col-xs-1 control-label">Search</label>
-        <div class="col-xs-3">
-          <input type="text"
-              id="search-text"
-              class="form-control"
-              placeholder="Player name or table number"
-              formControlName="filterText">
-        </div>
-
-        <div class="col-xs-5">
-          <button type="button"
-              class="btn btn-default pull-right"
-              [disabled]="selectedRoundComplete"
-              (click)="deleteResults()">
-            Delete Results
-          </button>
-
-          <button type="button"
-              class="btn btn-default pull-right redo-matches"
-              [disabled]="hasSubmittedPairings"
-              (click)="this.redoMatches.emit(selectedRoundId)">
-            Redo Matches
-          </button>
-        </div>
-      </div>
-    </form>
+    <mm-pairings-list-form
+      (filterTextChanged)="filterTextChanged($event)">
+    </mm-pairings-list-form>
     <table class="table table-hover">
       <thead>
         <tr>
@@ -47,7 +14,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let pairing of pairings"
+        <tr *ngFor="let pairing of pairings | pairingsFilter: playerEntities:filterText"
             [ngClass]="{'active': selectedPairingId === pairing.table}"
             (click)="selectPairing.emit(pairing.id)">
           <td>{{pairing.table}}</td>
