--- a/src/app/swiss/components/pairings-list.component.html
+++ b/src/app/swiss/components/pairings-list.component.html
@@ -1,7 +1,8 @@
 <div class="row" *ngIf="pairingsExist">
   <div class="col-xs-12">
     <mm-pairings-list-form
-      (filterTextChanged)="filterTextChanged($event)">
+      (filterTextChanged)="filterTextChanged($event)"
+      (showOutstandingOnlyChanged)="showOutstandingOnlyChanged($event)">
     </mm-pairings-list-form>
     <table class="table table-hover">
       <thead>
@@ -14,7 +15,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let pairing of pairings | pairingsFilter: playerEntities:filterText"
+        <tr *ngFor="let pairing of pairings | pairingsFilter: playerEntities:filterText:showOutstandingOnly"
             [ngClass]="{'active': selectedPairingId === pairing.table}"
             (click)="selectPairing.emit(pairing.id)">
           <td>{{pairing.table}}</td>
