#68: Fixing the redo matches button since I moved the form into a component.

--- a/src/app/swiss/components/pairings-list-form.component.html
+++ b/src/app/swiss/components/pairings-list-form.component.html
@@ -28,7 +28,7 @@
       <button type="button"
           class="btn btn-default pull-right redo-matches"
           [disabled]="hasSubmittedPairings"
-          (click)="this.redoMatches.emit(selectedRoundId)">
+          (click)="this.redoMatches.emit()">
         Redo Matches
       </button>
     </div>
