#68: Removed selected pairing from ngrx state and hooked it up in just the component.

--- a/src/app/swiss/components/pairings-list.component.html
+++ b/src/app/swiss/components/pairings-list.component.html
@@ -19,7 +19,7 @@
       <tbody>
         <tr *ngFor="let pairing of pairings | pairingsFilter: playerEntities:filterText:showOutstandingOnly"
             [ngClass]="{'active': selectedPairingId === pairing.table}"
-            (click)="selectPairing.emit(pairing.id)">
+            (click)="selectPairing.emit(pairing)">
           <td>{{pairing.table}}</td>
           <td>{{playerEntities[pairing.player1Id].name}}</td>
           <td>{{resultDisplayString(pairing)}}</td>
