--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -11,7 +11,6 @@
   [pairings]="pairings$ | async"
   [pairingsExist]="pairingsExist$ | async"
   [playerEntities]="playerEntities$ | async"
-  [selectedPairingId]="selectedPairingId$ | async"
   [selectedRoundComplete]="selectedRoundComplete$ | async"
   [selectedRoundId]="selectedRoundId$ | async"
   (redoMatches)="redoMatches($event)"
@@ -19,7 +18,7 @@
 </mm-pairings-list>
 <mm-match-results
   [playerEntities]="playerEntities$ | async"
-  [selectedPairing]="selectedPairing$ | async"
+  [selectedPairing]="selectedPairing"
   (clearMatchResult)="clearMatchResult($event)"
   (deleteResults)="deleteResults($event)"
   (playerDroppedChanged)="onPlayerDroppedChanged($event)"
