Revert "#68: Removed selected pairing from ngrx state and hooked it up in just the component."
This reverts commit 4c6dfb46ae7a030b46c4501dc3a3c5eedab118ab.

--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -11,6 +11,7 @@
   [pairings]="pairings$ | async"
   [pairingsExist]="pairingsExist$ | async"
   [playerEntities]="playerEntities$ | async"
+  [selectedPairingId]="selectedPairingId$ | async"
   [selectedRoundComplete]="selectedRoundComplete$ | async"
   [selectedRoundId]="selectedRoundId$ | async"
   (redoMatches)="redoMatches($event)"
@@ -18,7 +19,7 @@
 </mm-pairings-list>
 <mm-match-results
   [playerEntities]="playerEntities$ | async"
-  [selectedPairing]="selectedPairing"
+  [selectedPairing]="selectedPairing$ | async"
   (clearMatchResult)="clearMatchResult($event)"
   (deleteResults)="deleteResults($event)"
   (playerDroppedChanged)="onPlayerDroppedChanged($event)"
