--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -11,7 +11,7 @@
   [pairings]="pairings$ | async"
   [pairingsExist]="pairingsExist$ | async"
   [playerEntities]="playerEntities$ | async"
-  [selectedPairingId]="selectedPairingId$ | async"
+  [selectedPairing]="selectedPairing$ | async"
   [selectedRoundComplete]="selectedRoundComplete$ | async"
   [selectedRoundId]="selectedRoundId$ | async"
   (redoMatches)="redoMatches($event)"
