#68: Got submitting match results working again.

--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -23,5 +23,5 @@
   (clearMatchResult)="clearMatchResult($event)"
   (deleteResults)="deleteResults($event)"
   (playerDroppedChanged)="onPlayerDroppedChanged($event)"
-  (resultSubmitted)="onResultSubmitted($event)">
+  (submitResult)="submitResult($event)">
 </mm-match-results>
