#68: Getting dropping players from match submission working again.

--- a/src/app/swiss/containers/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page.component.html
@@ -22,6 +22,7 @@
   [playerEntities]="playerEntities$ | async"
   [selectedPairing]="selectedPairing$ | async"
   (clearMatchResult)="clearMatchResult($event)"
+  (dropPlayers)="dropPlayers($event)"
   (playerDroppedChanged)="onPlayerDroppedChanged($event)"
   (submitResult)="submitResult($event)">
 </mm-match-results>
