--- a/src/app/swiss/containers/swiss.component.html
+++ b/src/app/swiss/containers/swiss.component.html
@@ -3,8 +3,10 @@
     <div class="row">
       <div class="col-md-2">
         <mm-swiss-menu
+          [hasCompletedRounds]="hasCompletedRounds$ | async"
           [hasTournamentStarted]="hasTournamentStarted$ | async"
-          [numberOfActivePlayers]="numberOfActivePlayers$ | async"></mm-swiss-menu>
+          [numberOfActivePlayers]="numberOfActivePlayers$ | async">
+        </mm-swiss-menu>
       </div>
 
       <div class="col-md-10">
