--- a/src/app/swiss/components/pairings-list/pairings-list.component.html
+++ b/src/app/swiss/components/pairings-list/pairings-list.component.html
@@ -2,6 +2,7 @@
   <div class="col-xs-12">
     <mm-pairings-list-form
       [hasSubmittedPairings]="hasSubmittedPairings"
+      [selectedRoundComplete]="selectedRoundComplete"
       (deleteResults)="deleteResults.emit(pairings)"
       (filterTextChanged)="filterTextChanged($event)"
       (redoMatches)="redoMatches.emit(selectedRoundId)"
