#68: Implementing creation of next round.

--- a/src/app/swiss/containers/pairings-page/pairings-page.component.html
+++ b/src/app/swiss/containers/pairings-page/pairings-page.component.html
@@ -1,8 +1,10 @@
 <mm-pairings-menu
+  [canStartNextRound]="canStartNextRound$ | async"
   [numberOfRounds]="numberOfRounds$ | async"
   [pairingsExist]="pairingsExist$ | async"
   [roundIds]="roundIds$ | async"
   [selectedRoundId]="selectedRoundId$ | async"
+  (createNextRound)="createNextRound()"
   (createPairings)="createPairings($event)"
   (roundChanged)="roundChanged($event)">
 </mm-pairings-menu>
