--- a/src/app/swiss/components/pairings-menu/pairings-menu.component.html
+++ b/src/app/swiss/components/pairings-menu/pairings-menu.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-sm-2">
       <button class="btn btn-default" *ngIf="!pairingsExist" (click)="createPairingsClicked()">Create Pairings</button>
-      <button class="btn btn-default" *ngIf="canStartNextRound$ | async" (click)="createNextRound()">Create Next Round</button>
+      <button class="btn btn-default" *ngIf="canStartNextRound" (click)="createNextRound.emit()">Create Next Round</button>
     </div>
   </div>
 </div>
