#73: Adding a bunch of work on tests for PlayersPageComponent, PairingsPageComponent and EventInfoComponent. - Some cleanup in angular.json - Updated some karma dependencies. - Creating SwissEffects for effects that touch multiple slices of the state.

--- a/src/app/swiss/containers/event-info/event-info.component.html
+++ b/src/app/swiss/containers/event-info/event-info.component.html
@@ -3,8 +3,8 @@
     <mm-round-info
       [completedRoundId]="completedRoundId$ | async"
       [currentRoundId]="currentRoundId$ | async"
+      [numberOfMatchesInProgress]="numberOfMatchesInProgress$ | async"
       [numberOfRounds]="numberOfRounds$ | async"
-      [ongoingMatchesTotal]="ongoingMatchesTotal$ | async"
     ></mm-round-info>
   </div>
 
