--- a/src/app/swiss/components/round-info/round-info.component.html
+++ b/src/app/swiss/components/round-info/round-info.component.html
@@ -8,7 +8,7 @@
       <li>Number of rounds: {{numberOfRounds}}</li>
       <li>Current round: {{currentRoundId}}</li>
       <li>Completed round: {{completedRoundId || 'None'}}</li>
-      <li>Ongoing matches: {{ongoingMatchesTotal}}</li>
+      <li>Matches in progress: {{numberOfMatchesInProgress}}</li>
     </ul>
   </div>
 </div>
