--- a/src/app/swiss/components/pairings-menu/pairings-menu.component.html
+++ b/src/app/swiss/components/pairings-menu/pairings-menu.component.html
@@ -7,7 +7,7 @@
       </select>
     </div>
     <div class="col-sm-2">
-      <button class="btn btn-default" *ngIf="!pairingsExist" (click)="createPairingsClicked()">Create Pairings</button>
+      <button class="btn btn-default" *ngIf="!pairingsExist" (click)="createPairings.emit(selectedRoundId)">Create Pairings</button>
       <button class="btn btn-default" *ngIf="canStartNextRound" (click)="createNextRound.emit()">Create Next Round</button>
     </div>
   </div>
