--- a/src/app/swiss/containers/swiss/swiss.component.html
+++ b/src/app/swiss/containers/swiss/swiss.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="col-md-10">
-        <div class="alert alert-dismissible" [ngClass]="message.type" role="alert" *ngFor="let message of messages">
+        <div class="alert alert-dismissible" [ngClass]="message.type" role="alert" *ngFor="let message of messages$ | async">
           <button type="button" class="close" aria-label="Close" (click)="dismissMessage(message)">
             <span aria-hidden="true">&times;</span>
           </button>
